test/analyzer/input_programs/invalid_programs/program24.tea
one := 1

addOne := (x) ->
  x + one
end

# valid to invoke a function
addOne(1)

# invalid since one is not a function
one()